# kickmsg

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
.github/actions/setup-conan/: action.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench.cc  microbench.cc
bridge/: CMakeLists.txt
bridge/include/kickmsg/bridge/: Protocol.h
bridge/src/: Protocol.cc
bridge/tests/: protocol-t.cc
cmake/: install.cmake  kickmsg.pc.in  kickmsgConfig.cmake.in  toolchain.cmake.template
conan/: conanfile.py  profile_windows_x86_64.txt
examples/: CMakeLists.txt  hello_broadcast.cc  hello_diagnose.cc  hello_lowlevel.cc  hello_pubsub.cc  hello_schema.cc  hello_schema_late_publisher.cc  hello_zerocopy.cc
examples/python/: cli_playground.py  hello_camera_zerocopy.py  hello_pubsub.py  hello_schema.py
include/kickmsg/: Hash.h  Naming.h  Node.h  Publisher.h  Region.h  Registry.h  Subscriber.h  types.h  version.h
include/kickmsg/os/: Process.h  SharedMemory.h  Time.h
os/: Futex.h  Time.h
os/darwin/: Futex.cc  SharedMemory.cc
os/linux/: Futex.cc  SharedMemory.cc  Time.cc
os/windows/: SharedMemory.cc  Time.cc
py_bindings/: CMakeLists.txt  kickmsg.pyi
py_bindings/python/kickmsg/: _native.pyi  diagnostics.py
py_bindings/src/: kickmsg_py.cc
python/kickmsg/: __init__.py  _cli.py  _native.pyi  cli.py  diagnostics.py
scripts/: configure.sh  setup_build.sh  validate.sh
scripts/lib/: build_options.sh
src/: Hash.cc  Naming.cc  Node.cc  Publisher.cc  Region.cc  Registry.cc  Subscriber.cc  types.cc
src/os/darwin/: Futex.cc  Process.cc  SharedMemory.cc  Time.cc
src/os/linux/: Process.cc  SharedMemory.cc  Time.cc
src/os/posix/: Process.cc  SharedMemory.cc  Time.cc
src/os/windows/: Futex.cc  Process.cc  SharedMemory.cc  Time.cc
tests/: CMakeLists.txt  crash_test.cc  registry_stress_test.cc
tests/python/: conftest.py  test_diagnostics.py  test_lifetime.py  test_node.py  test_pubsub.py  test_schema.py  test_threading.py  test_zerocopy.py
tests/stress/: SCENARIOS.md  churn.cc  common.h  edge_cases.cc  fairness.cc  live_repair.cc  main.cc  mpmc.cc  pool_exhaustion.cc  treiber.cc
tests/unit/: naming-t.cc  node-t.cc  publisher-t.cc  region-t.cc  registry-t.cc  subscriber-t.cc  types-t.cc
tools/setup/: detect_compiler.sh  version.sh
