add_executable(hello_pubsub    hello_pubsub.cc)
add_executable(hello_zerocopy  hello_zerocopy.cc)
add_executable(hello_broadcast hello_broadcast.cc)
add_executable(hello_lowlevel  hello_lowlevel.cc)
add_executable(hello_diagnose  hello_diagnose.cc)
add_executable(hello_schema    hello_schema.cc)
add_executable(hello_schema_late_publisher hello_schema_late_publisher.cc)

target_link_libraries(hello_pubsub    PRIVATE kickmsg)
target_link_libraries(hello_zerocopy  PRIVATE kickmsg)
target_link_libraries(hello_broadcast PRIVATE kickmsg)
target_link_libraries(hello_lowlevel  PRIVATE kickmsg)
target_link_libraries(hello_diagnose  PRIVATE kickmsg)
target_link_libraries(hello_schema    PRIVATE kickmsg)
target_link_libraries(hello_schema_late_publisher PRIVATE kickmsg)
